Fix ease button alignment (#3474)
* Fix ease button alignment

* Make CSS not 'hacky'

--- a/qt/aqt/data/web/css/reviewer-bottom.scss
+++ b/qt/aqt/data/web/css/reviewer-bottom.scss
@@ -23,6 +23,16 @@ body {
     position: relative;
 }
 
+#innertable > tbody > tr {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+}
+
+#innertable > tbody > tr > td {
+    flex: 1;
+}
+
 button {
     min-width: 60px;
     white-space: nowrap;
